--- a/predict.ipynb
+++ b/predict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        ")"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -430,10 +430,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6e260670d0>"
+       "<matplotlib.image.AxesImage at 0x7f2a40e35e40>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        "        grad_fn=<AddmmBackward0>))"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
